src/test/ui/feature-gate/issue-49983-see-issue-0.rs
extern crate core;

// error should not say "(see issue #0)"
#[allow(unused_imports)] use core::ptr::Unique; //~ ERROR use of unstable library feature

fn main() {}
